# python_script_executor

./: README.md  errors1233113  install_dependencies.sh  pyproject.toml  s.sh  start.py  temp_errors  test_errors.py
.github/workflows/: codeCov.yml  codecov.yml  python-app.yml
.prep/: install_python3_9.sh
scripts/: install_aptitude_2.sh  install_aptitude_3.sh  upgrade_apps_4.sh
src/: app.py  cli_utils.py  exceptions.py  integration.py  module.py  output.py  output_input_controller.py  process.py  script.py  script_executor.py  shell.py  temporary_errors_buffer.py  utils.py
src/output_input_controllers/: base.py  controllers.py  descriptors.py  terminal_oi.py  terminal_oi_color.py  utils.py
tests/: config.py  conftest.py  fixtures.py  test_0_script_name_class.py  test_1_script_class.py  test_2_module_class.py  test_3_output_input_controller.py  test_4_process.py  test_4_shell_class.py  test_5_shell_class.py  test_6_temporary_errors_buffer.py  test_7_script_executor.py  test_8_integration.py  test_script_class.py  test_script_name_class.py  test_shell_class.py
tests/scripts/: bash_python_mix.sh  pass_input.py  python_error.py  python_input.py  python_std_err.py
tests/scripts/bad_scripts/: python_error.py  python_input.py  python_no_output.py  python_output.py
