[tool.poetry]
name = "python_script_orchestrator"
version = "0.1.0"
description = ""
authors = ["KubaTaba1uga <jakub@buczynski.net.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
pexpect = "^4.8.0"
psutil = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
